--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -45,14 +45,30 @@ ul > li:first-child + li {
   cursor: pointer;
 }
 
-.display {
+.displays {
   width: 100%;
   padding: 10px;
   height: 148px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.previousRecord {
+  width: 100%;
+  height: 48px;
+  font-size: 25px;
+  line-height: 50px;
+  color: #aeaeaee3;
+  text-align: right;
+  overflow: hidden;
+}
+.display {
+  width: 100%;
+  height: 60px;
   color: #e9e9e9;
   font-size: 60px;
   text-align: right;
-  line-height: 210px;
   overflow: hidden;
 }
 .buttons {
